--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = ["honeykjoule <honeykjoule@proton.me>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12,<3.13"
 requests = "^2.31.0"
+pandas = "^2.1.2"
 
 
 [build-system]
